# 3DOpenGLGame

./: README.md
GLGame/: CMakeLists.txt
GLGame/include/glad/: glad.h
GLGame/include/graphics/: batchRenderer2D.hpp  batchRendererCube.hpp  camera.h  model.hpp  objLoader.hpp  shader.h  texQuadBatch.hpp  texture2D.hpp
GLGame/include/physics/: raycast.hpp
GLGame/include/runner/: game.hpp
GLGame/resources/shaders/: shader.vs
GLGame/src/graphics/: batchRenderer2D.cpp  batchRendererCube.cpp  glad.c  texQuadBatch.cpp
GLGame/src/runner/: game.cpp  main.cpp
